--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
 <div class = "w3-container">
 <p><img src = "./images/ic_radio_white_18dp_2x.png" /> &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
 </div>
-<header class = "w3-theme-l5 w3-padding border">
+<header class = "w3-padding">
 <h1>Afsana Podcast</h1>
-<h3>Audio stories in Indian languages</h3>
+<h2>Audio stories in Indian languages</h2>
 </header>
 
 <p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a></p>
 
 <hr/>
 
-<h3>Latest podcast</h3>
+<h2>Latest podcast</h2>
 
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h4 class = "w3-border-bottom">Kallo rani</h4>
+<h3 class = "w3-border-bottom">Kallo rani</h3>
   <p class = "w3-padding"><img src="./images/ab_small.PNG" class="w3-circle border" style = "float:right"/><audio src = "./mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
   <p class="w3-text-grey w3-small">Hindi, 25 Feb 2016</p>
-<h4 class = "w3-border-top">Anindita Basu</h4>
+<h3 class = "w3-border-top">Anindita Basu</h3>
 </div> 
 </div>
 </div>
@@ -53,11 +53,11 @@
 <hr/>
 
 <a name = "more"></a>
-<h3>More podcasts</h3>
+<h2>More podcasts</h2>
 
 <p class = "w3-small">Click on an author or language to see a list of podcasts by that author or in that language.</p>
 
-<h4>Author-narrators</h4>
+<h3>Author-narrators</h3>
 
 <div id = "authors" class = "w3-container">
 
@@ -98,7 +98,7 @@
 
 </div>
 
-<h4>Languages</h4>
+<h3>Languages</h3>
 
 <div id = "languages" class = "w3-container">
 
