--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
 <body class = "w3-theme-d3">
 
 <div class = "w3-container">
-<div class = "w3-container">
-<p><img src = "./images/ic_radio_white_18dp_2x.png" /> &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
-</div>
-<header class = "w3-padding">
+
+<p class = "w3-white"><img src = "./images/ic_radio_black_18dp_2x.png" /> &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
+
+<header>
 <h1>Afsana Podcast</h1>
-<h2>Audio stories in Indian languages</h2>
+<p class = "w3-small w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a></p>
 </header>
 
-<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a></p>
+<hr/>
+
+<p>We hope you agree that one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language of the Indian subcontinent.</p>
+
+<p>Every Thursday, we upload an audio story written and narrated by ordinary people living ordinary lives but watching Life as it tells them stories. This earthiness of amateur voices, thinking and narrating in their mother tongues, is something that we hope will prevent us from being de-racinated. Occasionally, we also capture the street cries of India and share them as quick bytes.</p>
 
 <hr/>
 
@@ -102,7 +106,7 @@
 
 <div id = "languages" class = "w3-container">
 
-<p><a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
+<p class = "w3-small"><a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
 
 </div>
 
