--- a/html/header.html
+++ b/html/header.html
@@ -20,21 +20,16 @@
 
 <div class = "w3-container">
 
-<p><img src = "../images/ic_radio_white_18dp_2x.png" /> &nbsp;&nbsp;Afsana Podcast &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
+<p class = "w3-white"><img src = "../images/ic_radio_black_18dp_2x.png" /> &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;<span class = "w3-right">Afsana Podcast</span></p>
 
 <div class="w3-row">
 
 <div class = "w3-third">
-<p>
-<a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a>  
-<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
-</p>
-</div>
-
-<div class = "w3-twothird">
-<p class = "w3-right w3-dropdown-click">
+<p class = "w3-small">
+<a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a>&nbsp;&nbsp;  
+<span class = "w3-dropdown-click">
 <button onclick="myAuthFunction()" class = "w3-btn w3-round-jumbo w3-white border">Authors</button>
-	<span id = "authors" class="w3-dropdown-content w3-card-2 w3-text-grey" style="width:175px">
+	<span id = "authors" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
       <a href="author_ab.html">Anindita Basu</a>
       <a href="author_pk.html">Preran Kumar</a>
       <a href="author_rr.html">Ruchi Rana</a>
@@ -42,10 +37,24 @@
 	  <a href="author_ss.html">Shishir Somvanshi</a>
     </span>
 &nbsp;&nbsp;<button onclick="myLangFunction()" class = "w3-btn w3-round-jumbo w3-white border">Languages</button>
-	<span id = "languages" class="w3-dropdown-content w3-card-2 w3-text-grey" style="width:175px">
+	<span id = "languages" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
 	  <a href="language_hindi.html">Hindi</a>
 	  <a href="author_anon.html">Life</a>
     </span>
+</span>
+</p>
+</div>
+
+<div class = "w3-twothird">
+<p class = "w3-right w3-small">
+<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>&nbsp;&nbsp;
+<span class = "w3-dropdown-click">
+<button onclick="myContrFunction()" class = "w3-btn w3-round-jumbo w3-white border">Contribute</button>
+	<span id = "contribute" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
+      <a href="instructions.html">Audio stories</a>
+      <a href="instructions_quickBytes.html">Quick bytes</a>
+    </span>
+</span>
 </p>
 </div>
 
@@ -60,6 +69,12 @@ function myAuthFunction() {
 <script>
 function myLangFunction() {
     document.getElementById("languages").classList.toggle("w3-show");
+}
+</script>
+
+<script>
+function myContrFunction() {
+    document.getElementById("contribute").classList.toggle("w3-show");
 }
 </script>
 
