minor style changes

--- a/html/instructions.html
+++ b/html/instructions.html
@@ -30,11 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>How to publish an audio story on Afsana Podcast</h1></header>
-
-<p class = "w3-right-align">
-<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20an%20audio%20story%20podcast%20on%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1RZdJDw" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p>
+<header class = "w3-padding"><h1>How to publish an audio story on Afsana Podcast</h1></header>
 
 <p>This platform was created with the following two aims:</p>
 
@@ -48,13 +44,20 @@ $(function(){
 <p>If you write stories in any of the languages of the Indian subcontinent, Afsana Podcast welcomes you to use this platform to read out your stories to its listeners.</p>
 <p> Interested? Read on.</p>
 
+
 <ul>
 <li><a href = "#author_howto">What you, as an author, must do</a></li>
 <li><a href = "#post_prod">What we, at Afsana Podcast, do</a></li>
 <li><a href = "#legal">Legal stuff</a></li>
 </ul>
 
-<h2 class = "w3-theme-l5 w3-padding-tiny" id = "author_howto">What you, as an author, must do</h2>
+<p class = "w3-small">
+<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20an%20audio%20story%20podcast%20on%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1RZdJDw" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
+</p>
+
+<hr/>
+
+<h2 class = "w3-padding-tiny" id = "author_howto">What you, as an author, must do</h2>
 
 <ol>
 <li>Pick a story that you have written. Remember these things:
@@ -75,7 +78,9 @@ $(function(){
 <li>Email the sound file to us, at afsana.podcast@gmail.com, together with your photo (not too tiny. a decent-sized one) and a 3-4 line writeup (in English) about yourself.</li>
 </ol>
 
-<h2 class = "w3-theme-l5 w3-padding-tiny" id = "post_prod">What we, at Afsana Podcast, do</h2>
+<hr/>
+
+<h2 class = "w3-padding-tiny" id = "post_prod">What we, at Afsana Podcast, do</h2>
 
 <ol>
 <li>Review the story to ensure it contains no hate speech or pornography. If it does, we do not proceed further with it. Our decision in this regard is final.</li>
@@ -84,9 +89,13 @@ $(function(){
 <li>Publish your story on the Afsana Podcast home page, where it remains for a week. Thereafter, it is replaced by the newest story, but your story still remains on the website and can be accessed through either your author-profile page or the native-language page.</li>
 </ol>
 
-<h2 class = "w3-theme-l5 w3-padding-tiny" id = "legal">Legal stuff</h2>
+<hr/>
+
+<h2 class = "w3-padding-tiny" id = "legal">Legal stuff</h2>
 
 <p>The copyright of a story rests with its author. Afsana Podcast will host the story sound file on its website and tweet about it. Afsana Podcast will normally not take down any sound file after it has been published, except to comply with an order of a court of law. It is assumed that authors agree to these terms when they send across their material to us.</p>
+
+<hr/>
 
 </div>
 
