--- a/html/instructions_quickBytes.html
+++ b/html/instructions_quickBytes.html
@@ -30,15 +30,11 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>How to publish a Quick Bytes audio clip on Afsana Podcast</h1></header>
-
-<p class = "w3-right-align">
-<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20a%20QuickBytes%20audio%20clip%20on%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1TFnBDq" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p>
+<header class = "w3-padding"><h1>How to publish a Quick Bytes audio clip on Afsana Podcast</h1></header>
 
 <p>Afsana Podcast thinks Life, as it unfolds around us, tells us a thousand stories. Each overhead conversation, every fleeting scenario, indeed the entire tableau of Life, is a story &mdash; a story that can change with each retelling. It's fascinating.</p>
 
-<p>Therefore, <a href = "author_anon.html" title = "Street sounds of India" target = "_blank">Quick  Bytes.</p>
+<p>Therefore, <a href = "author_anon.html" title = "Street sounds of India" target = "_blank">Quick  Bytes</a>.</p>
 
 <p>If you have captured a slice of Life on your sound recorder, Afsana Podcast welcomes you to use this platform to share the slice with its listeners.</p>
 
@@ -50,14 +46,22 @@ $(function(){
 <li><a href = "#legal">Legal stuff</a></li>
 </ul>
 
-<h2 class = "w3-theme-l5 w3-padding-tiny" id = "author_howto">What you, as an author, must do</h2>
+<p class = "w3-small">
+<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20a%20QuickBytes%20audio%20clip%20on%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1TFnBDq" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
+</p>
+
+<hr/>
+
+<h2 class = "w3-padding-tiny" id = "author_howto">What you, as an author, must do</h2>
 
 <ol>
-<li>Record an interesting slice of everyday life around you. It should be an audio recording only and, ideally, no longer than 1 minute.</li>
+<li>Record an interesting slice of everyday life around you. It should be an audio recording only (no video) and, ideally, no longer than 1 minute.</li>
 <li>Email the sound file to us, at afsana.podcast@gmail.com, together with the date and location where the slice was recorded, and the language that the slice is in.</li>
 </ol>
 
-<h2 class = "w3-theme-l5 w3-padding-tiny" id = "post_prod">What we, at Afsana Podcast, do</h2>
+<hr/>
+
+<h2 class = "w3-padding-tiny" id = "post_prod">What we, at Afsana Podcast, do</h2>
 
 <ol>
 <li>Review the sound clip to ensure it contains no hate speech or pornography. If it does, we do not proceed further with it. Our decision in this regard is final.</li>
@@ -65,9 +69,13 @@ $(function(){
 <li>Publish the sound file as a Quick Byte on the Afsana Podcast home page, where it remains for a week, usually. Thereafter, it is replaced by the newest Quick Byte. All Quick Bytes still remain on the website, on the Life language page.</li>
 </ol>
 
-<h2 class = "w3-theme-l5 w3-padding-tiny" id = "legal">Legal stuff</h2>
+<hr/>
+
+<h2 class = "w3-padding-tiny" id = "legal">Legal stuff</h2>
 
 <p>Nobody, but Life, owns the copyright to Quick Bytes. Afsana Podcast will host the sound file on its website and tweet about it. Afsana Podcast will normally not take down any sound file after it has been published, except to comply with an order of a court of law. It is assumed that you agree to these terms when you send across your material to us.</p>
+
+<hr/>
 
 </div>
 
