--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<p class = "w3-text-grey w3-small">All stories are original works of the authors. The copyright thereof vests with them.</p>
 		<p class = "w3-text-grey w3-small">The website uses css files from <a href = "http://www.w3schools.com/w3css/default.asp" target = "_blank">http://www.w3schools.com/w3css/default.asp</a>. These files are free to use and no license attribution is required; however, it is only fair that the source be acknowledged.</p>
 		<p class = "w3-text-grey w3-small">The favicon and logo for the website is from Google's material icons library and is used here under Google's <a href = "https://creativecommons.org/licenses/by/4.0/" target = "_blank">CC-BY license</a>.</p>
-		<p>The sitemap for this website was generated at <a href="https://XmlSitemapGenerator.org" target="_blank" title="Free Google XML Sitemap Generator">HTML and Google Xml Sitemap Generator</a>.</p>
+		<p class = "w3-text-grey w3-small">The sitemap for this website was generated at <a href="https://XmlSitemapGenerator.org" target="_blank" title="Free Google XML Sitemap Generator">HTML and Google Xml Sitemap Generator</a>.</p>
       </div>
       <footer class="w3-container w3-theme-l4">
         <p>&nbsp;</p>
