--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class = "w3-theme-d3">
+<body class = "w3-theme-l4">
 
 <div class = "w3-container">
 
@@ -67,35 +67,35 @@
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_pk.html" title = "Podcasts by Preran Kumar" class = "anoline">
-<p class="w3-text-white">Preran Kumar</p>
+<p>Preran Kumar</p>
 <img src="./images/pk_small.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_rr.html" title = "Podcasts by Ruchi Rana" class = "anoline">
-<p class="w3-text-white">Ruchi Rana</p>
+<p>Ruchi Rana</p>
 <img src="./images/rr_small.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ab.html" title = "Podcasts by Anindita Basu" class = "anoline">
-<p class="w3-text-white">Anindita Basu</p>
+<p>Anindita Basu</p>
 <img src="./images/ab_small.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ss.html" title = "Podcasts by Shishir Somvanshi" class = "anoline">
-<p class="w3-text-white">Shishir Somvanshi</p>
+<p>Shishir Somvanshi</p>
 <img src="./images/ss_small.png" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_rs.html" title = "Podcasts by Rahul Shabd" class = "anoline">
-<p class="w3-text-white">Rahul Shabd</p>
+<p>Rahul Shabd</p>
 <img src="./images/rs_small.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>
 </a>
 </div>
