--- a/html/author_sr.html
+++ b/html/author_sr.html
@@ -24,26 +24,20 @@ $(function(){
 
 </head>
 
-<body class = "w3-theme-d3">
+<body class = "w3-theme-l4">
 
 <div class = "w3-container">
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>Sandhya Rathore</h1></header>
+<header class = "w3-padding"><h1>Sandhya Rathore</h1></header>
 
-<p class = "w3-right-align">
-<a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@saanjh_savere%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1oAYUMd" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
-<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
-</p>
-
-<p><img src="../images/sr.png" class="w3-circle border"/><!--Sandhya Rathore.--></p>
+<p><img src="../images/sr.png" class="w3-circle border"/>Sandhya Rathore is an engineer, mother, daughter, sister, friend, and &mdash; in the midst of being all of these &mdash; a writer. She likes to dream; some of these have come true. She's been interested in writing since childhood. Over time, she's seen many faces of life &mdash; some good, some bad &mdash; and when she found herself unable to speak out, she wrote. With gusto. Her heart is that of a poet's &mdash; like glass. It's endured several cracks but she treasures it nevertheless. Her writings are but descriptions of events in life around her; it is her trifling attempt to string them through words.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
-  <td><p>&nbsp;</p></td>
+  <td><p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@saanjh_savere%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1oAYUMd" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
