--- a/Sitemap.htm
+++ b/Sitemap.htm
@@ -45,6 +45,8 @@
 </li><li><a href="http://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana</span></a>
 </li><li><a href="http://afsanapodcast.github.io/afsana/html/author_ss.html"><span class="title">Shishir Somvanshi</span></a>
 </li><li><a href="http://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd</span></a>
+</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_sr.html"><span class="title">Sandhya Rathore</span></a>
+</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen</span></a>
 </li><li><a href="http://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds</span></a>
 </li><li><a href="http://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a>
 </li></ul></li></ul><!--<guid value="978d1735-297f-425a-b9c0-58b7837953fd" />--><!--Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator-->
