broken link correction

--- a/html/header.html
+++ b/html/header.html
@@ -88,7 +88,7 @@ function myContrFunction() {
       </header>
       <div class="w3-container">        
 		<p class = "w3-text-grey w3-small">To be notified whenever we upload a story or a Quick Byte to the website, send an email to afsana.podcast@gmail.com with "Subscribe" in the subject line, like shown in this picture:</p>
-		<img src = "../images/subscribe.PNG" class = "imgborder"/>
+		<img src = "../images/subscribe.png" class = "imgborder"/>
 		<p class = "w3-text-grey w3-small">We will never share your email ID with anybody and never spam you. At any time, you can ask to be removed from the mailing list.</p>
       </div>
       <footer class="w3-container w3-theme-l4">
