--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -46,6 +46,10 @@ $(function(){
   <td><p>Sale sale sale<br/><span class = "w3-small">Hindi, from Allahabad, in January 2016</span></p></td>
   <td><p><audio src = "../mp3/anon_sale.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Bees rupiya<br/><span class = "w3-small">Hindi, from Allahabad, in February 2016</span></p></td>
+  <td><p><audio src = "../mp3/anon_matar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
