commenting out the image

--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -32,7 +32,7 @@ $(function(){
 
 <header class = "w3-padding"><h1>Street sounds</h1></header>
 
-<p><img src="../images/anon.png" class="w3-circle border"/>Life, as we hear it around us, telling us stories.</p>
+<p><!--<img src="../images/anon.png" class="w3-circle border"/>-->Life, as we hear it around us, telling us stories.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
