soundlink for sr's story

--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -67,6 +67,10 @@ $(function(){
   <td><p>Kallo rani (Anindita Basu)</p></td>
   <td><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Baarish (Sandhya Rathore)</p></td>
+  <td><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
