--- a/html/author_sr.html
+++ b/html/author_sr.html
@@ -41,7 +41,7 @@ $(function(){
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p>Barish (Hindi)</p></td>
+  <td><p>Baarish (Hindi)</p></td>
   <td><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
