--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Kallo rani</h3>
-  <p class = "w3-padding"><img src="./images/ab_small.PNG" class="w3-circle border" style = "float:right"/><audio src = "./mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 25 Feb 2016</p>
-<h3 class = "w3-border-top">Anindita Basu</h3>
+<h3 class = "w3-border-bottom">Baarish</h3>
+  <p class = "w3-padding"><img src="./images/sr_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 3 Mar 2016</p>
+<h3 class = "w3-border-top">Sandhya Rathore</h3>
 </div> 
 </div>
 </div>
@@ -114,6 +114,13 @@ function myContrFunction() {
 <a href = "./html/author_rs.html" title = "Podcasts by Rahul Shabd" class = "anoline">
 <p>Rahul Shabd</p>
 <img src="./images/rs_small.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>
+</a>
+</div>
+
+<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_sr.html" title = "Podcasts by Sandhya Rathore" class = "anoline">
+<p>Rahul Shabd</p>
+<img src="./images/sr_small.png" class="w3-circle borderwhite" alt="Sandhya Rathore"/>
 </a>
 </div>
 
