--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ function myContrFunction() {
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_sr.html" title = "Podcasts by Sandhya Rathore" class = "anoline">
-<p>Rahul Shabd</p>
+<p>Sandhya Rathore</p>
 <img src="./images/sr_small.png" class="w3-circle borderwhite" alt="Sandhya Rathore"/>
 </a>
 </div>
