--- a/html/header.html
+++ b/html/header.html
@@ -32,9 +32,10 @@
 	<span id = "authors" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
       <a href="author_ab.html">Anindita Basu</a>
       <a href="author_pk.html">Preran Kumar</a>
+      <a href="author_rs.html">Rahul Shabd</a>
       <a href="author_rr.html">Ruchi Rana</a>
-	  <a href="author_rs.html">Rahul Shabd</a>
-	  <a href="author_ss.html">Shishir Somvanshi</a>
+      <a href="author_sr.html">Sandhya Rathore</a>
+      <a href="author_ss.html">Shishir Somvanshi</a>
     </span>
 &nbsp;&nbsp;<button onclick="myLangFunction()" class = "w3-btn w3-round-jumbo w3-white border">Languages</button>
 	<span id = "languages" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
