sound link for RS's story

--- a/index.html
+++ b/index.html
@@ -52,8 +52,18 @@ function myContrFunction() {
 
 <hr/>
 
-<h2>Latest podcast</h2>
+<h2>Latest podcasts</h2>
 
+<div class="w3-row">
+<div class = "w3-card w3-third doubleborder">
+<div class = "w3-container w3-theme-l5">
+<h3 class = "w3-border-bottom">Beti ka byaah</h3>
+  <p class = "w3-padding"><img src="./images/rs_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 10 Mar 2016</p>
+<h3 class = "w3-border-top">Rahul Shabd</h3>
+</div> 
+</div>
+</div>
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
@@ -65,11 +75,9 @@ function myContrFunction() {
 </div>
 </div>
 
-<div class = "w3-container">
-
+<!--<div class = "w3-container">
 <p class = "w3-right-align"><span class = "w3-tag w3-theme-l5 doubleborder">Quick bytes<br/><span class = "w3-small">Make your own story<br/></span><br/><audio src = "./mp3/anon_matar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio><br/></span></p>
-
-</div>
+</div>-->
 
 <hr/>
 
