--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -46,6 +46,10 @@ $(function(){
   <td><p>Rachna (Hindi)</p></td>
   <td><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Beti ka byaah (Hindi)</p></td>
+  <td><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
