soundlink, RS's byah

--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -71,6 +71,10 @@ $(function(){
   <td><p>Baarish (Sandhya Rathore)</p></td>
   <td><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Beti ka byaah (Rahul Shabd)</p></td>
+  <td><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
