--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ function myContrFunction() {
 </div> 
 </div>
 </div>
+<p>&nbsp;</p>
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
