SA's koshur story links

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Beti ka byaah</h3>
-  <p class = "w3-padding"><img src="./images/rs_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 10 Mar 2016</p>
-<h3 class = "w3-border-top">Rahul Shabd</h3>
+<h3 class = "w3-border-bottom">Musafir</h3>
+  <p class = "w3-padding"><img src="./images/sa_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Kashmiri/Koshur, 17 Mar 2016</p>
+<h3 class = "w3-border-top">Syed Aatirah</h3>
 </div> 
 </div>
 </div>
@@ -68,10 +68,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Baarish</h3>
-  <p class = "w3-padding"><img src="./images/sr_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 3 Mar 2016</p>
-<h3 class = "w3-border-top">Sandhya Rathore</h3>
+<h3 class = "w3-border-bottom">Beti ka byaah</h3>
+  <p class = "w3-padding"><img src="./images/rs_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 10 Mar 2016</p>
+<h3 class = "w3-border-top">Rahul Shabd</h3>
 </div> 
 </div>
 </div>
@@ -133,13 +133,20 @@ function myContrFunction() {
 </a>
 </div>
 
+<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_sa.html" title = "Podcasts by Syed Aatirah" class = "anoline">
+<p>Syed Aatirah</p>
+<img src="./images/sa_small.png" class="w3-circle borderwhite" alt="Syed Aatirah"/>
+</a>
+</div>
+
 </div>
 
 <h3>Languages</h3>
 
 <div id = "languages" class = "w3-container">
 
-<p class = "w3-small"><a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
+<p class = "w3-small"><a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur </a></p>
 
 </div>
 
