Fixing the tweet button code

--- a/html/author_sa.html
+++ b/html/author_sa.html
@@ -38,12 +38,12 @@ $(function(){
 <table class="w3-table w3-bordered">
 <tr>
   <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@SyedAatirah%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F21bCop1" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@SyedAatirah%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F21bCop1&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
 </p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p>Musafir (Kashmiri)</p></td>
+  <td><p>Musafir (Kashmiri/Koshur)</p></td>
   <td><p><audio src = "../mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
