--- a/html/author_ss.html
+++ b/html/author_ss.html
@@ -38,7 +38,7 @@ $(function(){
 <table class="w3-table w3-bordered">
 <tr>
   <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Shishir_Som%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1NISHlv" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Shishir_Som%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1NISHlv&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
 </p></td>
   <td><p>&nbsp;</p></td>
 </tr>
