--- a/html/language_kashmiri.html
+++ b/html/language_kashmiri.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana language page: Kashmiri podcasts</title>
+<title>Afsana language page: Kashmiri/Koshur podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,13 +30,13 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Kashmiri stories</h1></header>
+<header class = "w3-padding"><h1>Kashmiri/Koshur stories</h1></header>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
   <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Kashmiri%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1So8vRW" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Kashmiri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1So8vRW&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
