--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -38,7 +38,7 @@ $(function(){
 <table class="w3-table w3-bordered">
 <tr>
   <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
+<a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
 </p></td>
   <td><p>&nbsp;</p></td>
 </tr>
