--- a/html/instructions_quickBytes.html
+++ b/html/instructions_quickBytes.html
@@ -47,7 +47,7 @@ $(function(){
 </ul>
 
 <p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20a%20QuickBytes%20audio%20clip%20on%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1TFnBDq" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
+<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20a%20QuickBytes%20audio%20clip%20on%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1TFnBDq" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
 </p>
 
 <hr/>
