--- a/html/header.html
+++ b/html/header.html
@@ -20,7 +20,11 @@
 
 <div class = "w3-container">
 
-<p class = "w3-white"><img src = "../images/ic_radio_black_18dp_2x.png" /> &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;<span class = "w3-right"><span style = "font-family:Bookman Old Style; font-size:24px">Afsana Podcast &nbsp;&nbsp;</span></span> &nbsp;&nbsp;</p>
+<p class = "w3-white"><img src = "../images/ic_radio_black_18dp_2x.png" /> &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
+
+<header>
+<h1>Afsana Podcast</h1>
+</header>
 
 <div class="w3-row">
 
