page structure: h1 to h2

--- a/html/author_sa.html
+++ b/html/author_sa.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Syed Aatirah</title>
+<title>Afsana author page: Syed Aatirah's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Syed Aatirah</h1></header>
+<header class = "w3-padding"><h2>Syed Aatirah</h2></header>
 
 <p><img src="../images/sa.png" class="w3-circle border"/>Syed Aatirah is an engineering student from Kashmir. Her passion for writing and literature is inherited from her maternal family. She welcomes critics; she is passionate about learning and hopes to excel.</p>
 
