--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Anindita Basu</title>
+<title>Afsana author page: Anindita Basu's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Anindita Basu</h1></header>
+<header class = "w3-padding"><h2>Anindita Basu</h2></header>
 
 <p><img src="../images/ab.PNG" class="w3-circle border"/>Anindita Basu likes words, languages, and stories; she dislikes whataboutery, laziness, and sweets.</p>
 
