--- a/html/author_ap.html
+++ b/html/author_ap.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Ajay Purohit</title>
+<title>Afsana author page: Ajay Purohit's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Ajay Purohit</h1></header>
+<header class = "w3-padding"><h2>Ajay Purohit</h2></header>
 
 <p><img src="../images/ap.png" class="w3-circle border"/>Ajay Purohit is an engineer by profession, not a writer. He used write during his school days, years ago, and is now trying to revive the habit. He listens to music avidly, watches loads of Hindi films from its golden era, and is a gadget freak. Ajay tweets regularly from <a href = "https://twitter.com/Ajaythetwit" target = "_blank">@Ajaythetwit</a>.</p>
 
