--- a/html/author_mk.html
+++ b/html/author_mk.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Mohammad Kausen</title>
+<title>Afsana author page: Mohammad Kausen's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Mohammad Kausen</h1></header>
+<header class = "w3-padding"><h2>Mohammad Kausen</h2></header>
 
 <p><img src="../images/mk.png" class="w3-circle border"/>Mohammad Kausen is from the tiny village of Dadheru Khurd in Muzaffarnagar of Uttar Pradesh. He lives in Saudi Arabia. He likes art, music, cooking, writing, and anything artistic. He blogs at <a href = "http://mohd-kausen.blogspot.com/" target = "_blank"> मुसाफिर </a>.</p>
 
