--- a/html/author_pk.html
+++ b/html/author_pk.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Preran Kumar</title>
+<title>Afsana author page: Preran Kumar's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Preran Kumar</h1></header>
+<header class = "w3-padding"><h2>Preran Kumar</h2></header>
 
 <p><img src="../images/pk.jpg" class="w3-circle border"/>Preran Kumar lives in Toronto, the largest city of Canada. Besides writing, he likes to cook. He is extremely fond of Hindi films and counts himself among the foremost fans of Rekha and Amitabh Bachchan. He does not consider a day to be complete without a Lata Mangeshkar song, and he cannot sleep without reading a book. His days start with Mirabai's bhajans and often end with Jagjit Singh's ghazals. He hopes you'll like his stories.</p>
 
