--- a/html/author_rr.html
+++ b/html/author_rr.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Ruchi Rana</title>
+<title>Afsana author page: Ruchi Rana's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Ruchi Rana</h1></header>
+<header class = "w3-padding"><h2>Ruchi Rana</h2></header>
 
 <p><img src="../images/rr.png" class="w3-circle border"/>Ruchi Rana lives in Germany and belongs to Allahabad. She carries the tehzeeb of Ganga-Jamuna and Sangam in her being. She is passionate about music, books, and writing, and adores jhumkis and Banarasi stoles. She loves to cook, and to grow plants and flowers in all seasons.  Her day begins with Pt. Bhimsen Joshi's Bhairvi and ends with Begum Akhtar's ethereal baritone.  She is excited about Afsana Podcast and hopes it would be liked by all. </p>
 
