--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Rahul Shabd</title>
+<title>Afsana author page: Rahul Shabd's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Rahul Shabd</h1></header>
+<header class = "w3-padding"><h2>Rahul Shabd</h2></header>
 
 <p><img src="../images/rs.png" class="w3-circle border"/>Rahul Shabd is from Gwalior, Madhya pradesh. He likes to write stories and poems. He also likes music, movies, food, and cricket.</p>
 
