--- a/html/author_sp.html
+++ b/html/author_sp.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Sarala Prakash</title>
+<title>Afsana author page: Sarala Prakash's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Sarala Prakash</h1></header>
+<header class = "w3-padding"><h2>Sarala Prakash</h2></header>
 
 <p><img src="../images/sp.png" class="w3-circle border"/>Is electrical-engineer-turned-technical-writer. Reads Kannada and English novels. Watches plays, movies, tennis, and cricket. Loves to travel.</p>
 
