--- a/html/author_sr.html
+++ b/html/author_sr.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Sandhya Rathore</title>
+<title>Afsana author page: Sandhya Rathore's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Sandhya Rathore</h1></header>
+<header class = "w3-padding"><h2>Sandhya Rathore</h2></header>
 
 <p><img src="../images/sr.png" class="w3-circle border"/>Sandhya Rathore is an engineer, mother, daughter, sister, friend, and &mdash; in the midst of being all of these &mdash; a writer. She likes to dream; some of these have come true. She's been interested in writing since childhood. Over time, she's seen many faces of life &mdash; some good, some bad &mdash; and when she found herself unable to speak out, she wrote. With gusto. Her heart is that of a poet's &mdash; like glass. It's endured several cracks but she treasures it nevertheless. Her writings are but descriptions of events in life around her; it is her trifling attempt to string them through words.</p>
 
