--- a/html/author_ss.html
+++ b/html/author_ss.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Shishir Somvanshi</title>
+<title>Afsana author page: Shishir Somvanshi's podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h1>Shishir Somvanshi</h1></header>
+<header class = "w3-padding"><h2>Shishir Somvanshi</h2></header>
 
 <p><img src="../images/ss.png" class="w3-circle border"/>Shishir Somvanshi is a forestry scientist. He writes poems and stories on love and life. His blog is at <a href = "http://www.shishirkikavitayen.blogspot.in/" target = "_blank">http://www.shishirkikavitayen.blogspot.in/</a> and Facebook page at <a href = "http://www.facebook.com/shishirsomvanshiunlimited" target = "_blank">http://www.facebook.com/shishirsomvanshiunlimited</a>.</p>
 
