trivia and tiny author pics in lang pages

--- a/html/language_bengali.html
+++ b/html/language_bengali.html
@@ -30,7 +30,9 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h2>Bengali/Bangla stories</h2></header>
+<header class = "w3-padding"><h2>Bengali/Bangla audio stories</h2></header>
+
+<p>Trivia: Bengali is referred to as Bangla by its native speakers. It was the Bengali language movement, and the lives lost therefor, that led UNESCO to declare February 21 as International Mother Language Day.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
@@ -40,7 +42,7 @@ $(function(){
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p>Biye barir byakaran (Shankhadip Paria)</p></td>
+  <td><p><img src="../images/ic_person_black_48dp_2x_tiny.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>&nbsp;&nbsp;Biye barir byakaran (Shankhadip Paria)</p></td>
   <td><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
