--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -30,7 +30,9 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h2>Hindi stories</h2></header>
+<header class = "w3-padding"><h2>Hindi audio stories</h2></header>
+
+<p>Trivia: Udaant Martand, published from Calcutta, was the first Hindi newspaper of India. It was born in 1826 and lived only for about 18 months. Calcutta's association with "firsts" in Hindi does not stop here, though. The very first gramophone record that was cut in India was in Hindi, and in the voice of Gauhar Jaan, a Calcutta courtesan.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
@@ -40,39 +42,39 @@ $(function(){
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p>Ek safar (Preran Kumar)</p></td>
+  <td><p><img src="../images/pk_tiny.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>&nbsp;&nbsp;Ek safar (Preran Kumar)</p></td>
   <td><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Shukriya aye darakht (Ruchi Rana)</p></td>
+  <td><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Shukriya aye darakht (Ruchi Rana)</p></td>
   <td><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Tulsi ka ped (Anindita Basu)</p></td>
+  <td><p><img src="../images/ab_tiny.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Tulsi ka ped (Anindita Basu)</p></td>
   <td><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Punarjanm (Shishir Somvanshi)</p></td>
+  <td><p><img src="../images/ss_tiny.png" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>&nbsp;&nbsp;Punarjanm (Shishir Somvanshi)</p></td>
   <td><p><audio src = "../mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Kaghaz ki khwahishein (Ruchi Rana)</p></td>
+  <td><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Kaghaz ki khwahishein (Ruchi Rana)</p></td>
   <td><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Rachna (Rahul Shabd)</p></td>
+  <td><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Rachna (Rahul Shabd)</p></td>
   <td><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Kallo rani (Anindita Basu)</p></td>
+  <td><p><img src="../images/ab_tiny.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Kallo rani (Anindita Basu)</p></td>
   <td><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Baarish (Sandhya Rathore)</p></td>
+  <td><p><img src="../images/sr_tiny.png" class="w3-circle borderwhite" alt="Sandhya Rathore"/>&nbsp;&nbsp;Baarish (Sandhya Rathore)</p></td>
   <td><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p>Beti ka byaah (Rahul Shabd)</p></td>
+  <td><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Beti ka byaah (Rahul Shabd)</p></td>
   <td><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
