--- a/html/language_kannada.html
+++ b/html/language_kannada.html
@@ -30,7 +30,9 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h2>Kannada stories</h2></header>
+<header class = "w3-padding"><h2>Kannada audio stories</h2></header>
+
+<p>Trivia: Kannada has given India the second-most number of Jnanpith awards: eight. It is also one of the six classical languages of India.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
@@ -40,7 +42,7 @@ $(function(){
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p>Santaapa (Sarala Prakash)</p></td>
+  <td><p><img src="../images/sp_tiny.png" class="w3-circle borderwhite" alt="Sarala Prakash"/>&nbsp;&nbsp;Santaapa (Sarala Prakash)</p></td>
   <td><p><audio src = "../mp3/sp_santaapa.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
