--- a/html/language_kashmiri.html
+++ b/html/language_kashmiri.html
@@ -30,7 +30,9 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h2>Kashmiri/Koshur stories</h2></header>
+<header class = "w3-padding"><h2>Kashmiri/Koshur audio stories</h2></header>
+
+<p>Trivia: The people of Kashmir refer to their language as Koshur, which is written in two scripts: Sharada and Perso-Arabic. Kashmiri belongs to Dardic group  of languages and is a cousin of other languages that are spoken in the Himayalan region, right up to eastern Afghanistan.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
@@ -40,7 +42,7 @@ $(function(){
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p>Musafir (Syed Aatirah)</p></td>
+  <td><p><img src="../images/sa_tiny.png" class="w3-circle borderwhite" alt="Syed Aatirah"/>&nbsp;&nbsp;Musafir (Syed Aatirah)</p></td>
   <td><p><audio src = "../mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
